화면짤림 수정 v0.2a
마이페이지 화면 짤림 수정
  tools:context=".RegisterActivity">
을 아래 것으로 수정  tools:context=".Fragment.MyFragment">

--- a/app/src/main/res/layout/activity_my_fragment.xml
+++ b/app/src/main/res/layout/activity_my_fragment.xml
@@ -3,23 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RegisterActivity" >
+    android:layout_height="600dp"
+    tools:context=".Fragment.MyFragment">
+
 
     <TextView
         android:id="@+id/logoutTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="5dp"
         android:text="@string/logout"
         android:textColor="@color/colorRed"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hpTv"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/withdrawalTv"
+        app:layout_constraintTop_toBottomOf="@+id/hpTv" />
 
     <TextView
         android:id="@+id/infoTv"
@@ -321,43 +319,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="5dp"
         android:onClick="onOkBtnClick"
         android:text="@string/modifyok"
         android:textColor="@color/colorAccent"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hp3Et"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/cancelTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="5dp"
-        android:onClick="onCancelBtnClick"
-        android:text="@string/cancel"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/modifyOkTv"
-        app:layout_constraintTop_toBottomOf="@+id/hp2Et"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/hp3Et" />
 
     <TextView
         android:id="@+id/withdrawalTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="5dp"
         android:text="@string/withdrawal"
         android:textColor="@color/colorRed"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/logoutTv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hpTv"
         app:layout_constraintVertical_bias="0.0" />
