--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,19 +20,20 @@
         android:id="@+id/useridTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:text="@string/id"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/infoTv" />
 
+
     <EditText
         android:id="@+id/idEt"
-        android:layout_width="180dp"
+        android:layout_width="142dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/custom_edittxt"
         android:ems="10"
         android:inputType="textEmailAddress"
@@ -41,14 +42,16 @@
         app:layout_constraintEnd_toStartOf="@+id/btnCheckDuplicateId"
         app:layout_constraintTop_toBottomOf="@+id/infoTv" />
 
-    <Button
+    <TextView
         android:id="@+id/btnCheckDuplicateId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
         android:onClick="OnClickCheckDuplicateID"
-        android:text="ID 체크"
+        android:text="ID체크"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/infoTv" />
 
@@ -56,7 +59,7 @@
         android:id="@+id/pwTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="26dp"
         android:text="@string/pw"
         android:textSize="18sp"
@@ -65,14 +68,14 @@
 
     <EditText
         android:id="@+id/pwEt"
-        android:layout_width="280dp"
+        android:layout_width="205dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
-        android:textCursorDrawable="@drawable/edittxt_cursor"
         android:ems="10"
         android:inputType="textWebPassword"
+        android:textCursorDrawable="@drawable/edittxt_cursor"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idEt" />
@@ -81,7 +84,7 @@
         android:id="@+id/pwChkTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="26dp"
         android:text="@string/pw_chk"
         android:textSize="18sp"
@@ -90,16 +93,16 @@
 
     <EditText
         android:id="@+id/pwChkEt"
-        android:layout_width="280dp"
+        android:layout_width="205dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
-        android:textCursorDrawable="@drawable/edittxt_cursor"
         android:ems="10"
-        android:inputType="textWebPassword"
-        android:textSize="16sp"
         android:imeOptions="actionDone"
+        android:inputType="textWebPassword"
+        android:textCursorDrawable="@drawable/edittxt_cursor"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pwEt" />
 
@@ -107,7 +110,7 @@
         android:id="@+id/nameTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
         android:text="@string/name"
         android:textSize="18sp"
@@ -116,14 +119,14 @@
 
     <EditText
         android:id="@+id/nameEt"
-        android:layout_width="280dp"
+        android:layout_width="205dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
-        android:textCursorDrawable="@drawable/edittxt_cursor"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textCursorDrawable="@drawable/edittxt_cursor"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pwChkTv" />
@@ -132,7 +135,7 @@
         android:id="@+id/emailTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:text="@string/email"
         android:textSize="18sp"
@@ -141,10 +144,9 @@
 
     <EditText
         android:id="@+id/email1Et"
-        android:layout_width="80dp"
+        android:layout_width="77dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
         android:ems="10"
         android:imeOptions="actionDone"
@@ -157,15 +159,15 @@
 
     <EditText
         android:id="@+id/emailAnotaion"
-        android:layout_width="32dp"
+        android:layout_width="25dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
         android:ems="0"
-        android:imeOptions="actionDone"
-        android:text="@"
         android:enabled="false"
+        android:imeOptions="actionDone"
+        android:padding="5dp"
+        android:text="@"
         android:textColor="@color/colorRed"
         android:textCursorDrawable="@drawable/edittxt_cursor"
         android:textSize="16sp"
@@ -174,10 +176,10 @@
 
     <EditText
         android:id="@+id/email2Et"
-        android:layout_width="150dp"
+        android:layout_width="102dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
         android:ems="10"
         android:imeOptions="actionDone"
@@ -192,7 +194,7 @@
         android:id="@+id/genderTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="29dp"
         android:text="@string/gender"
         android:textSize="18sp"
@@ -201,10 +203,10 @@
 
     <RadioGroup
         android:id="@+id/genderRg"
-        android:layout_width="280dp"
+        android:layout_width="205dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:orientation="horizontal"
         android:paddingTop="2dp"
         android:paddingBottom="2dp"
@@ -254,7 +256,7 @@
         android:id="@+id/hpTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:text="휴대폰"
         android:textSize="18sp"
@@ -263,12 +265,12 @@
 
     <EditText
         android:id="@+id/hp1Et"
-        android:layout_width="80dp"
+        android:layout_width="57dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/custom_edittxt"
-        android:ems="10"
+        android:ems="5"
         android:imeOptions="actionDone"
         android:inputType="phone"
         android:text=""
@@ -279,12 +281,12 @@
 
     <EditText
         android:id="@+id/hp2Et"
-        android:layout_width="80dp"
+        android:layout_width="69dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/custom_edittxt"
-        android:ems="10"
+        android:ems="5"
         android:imeOptions="actionDone"
         android:inputType="phone"
         android:text=""
@@ -295,12 +297,12 @@
 
     <EditText
         android:id="@+id/hp3Et"
-        android:layout_width="80dp"
+        android:layout_width="69dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
-        android:ems="10"
+        android:ems="5"
         android:imeOptions="actionDone"
         android:inputType="phone"
         android:text=""
@@ -313,7 +315,7 @@
         android:id="@+id/modifyOkTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:onClick="onOkBtnClick"
         android:text="@string/okay"
@@ -327,11 +329,11 @@
         android:id="@+id/cancelTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginBottom="16dp"
+        android:onClick="onCancelBtnClick"
         android:text="@string/cancel"
         android:textSize="20sp"
-        android:onClick="onCancelBtnClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
