쇼핑홈 리스트 추가 v0.4
-쇼핑홈 리스트 추가
-리스트 클릭시 해당 상세페이지 보이기
-카테고리 클릭 이벤트는 수정중

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -11,9 +11,11 @@
         <item>70대이상</item>
     </string-array>
 
-    <string-array name="type">
-        <item>Top</item>
-        <item>Bottom</item>
-        <item>Acc</item>
+    <string-array name="category">
+        <item>화환</item>
+        <item>관상</item>
+        <item>기능성</item>
+        <item>꽃배달</item>
+        <item>부가제품</item>
     </string-array>
 </resources>
