--- a/app/src/main/res/layout/activity_my_fragment.xml
+++ b/app/src/main/res/layout/activity_my_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="600dp"
+    android:layout_height="match_parent"
     tools:context=".Fragment.MyFragment">
 
 
@@ -44,7 +44,7 @@
         android:id="@+id/idEt"
         android:layout_width="205dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="26dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
         android:ems="5"
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="28dp"
         android:text="@string/pw_chk"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="30dp"
         android:text="@string/name"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,22 +121,23 @@
         android:id="@+id/nameEt"
         android:layout_width="205dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
         android:ems="5"
+        android:imeOptions="actionDone"
         android:inputType="textPersonName"
         android:textCursorDrawable="@drawable/edittxt_cursor"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pwChkTv" />
+        app:layout_constraintTop_toBottomOf="@+id/pwChkEt" />
 
     <TextView
         android:id="@+id/emailTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="26dp"
         android:text="@string/email"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +150,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_edittxt"
         android:ems="5"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionDone|flagForceAscii"
         android:inputType="text"
         android:text=""
         android:textCursorDrawable="@drawable/edittxt_cursor"
@@ -165,7 +166,6 @@
         android:background="@drawable/custom_edittxt"
         android:ems="0"
         android:enabled="false"
-        android:imeOptions="actionDone"
         android:padding="5dp"
         android:text="@"
         android:textColor="@color/colorRed"
@@ -182,7 +182,7 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
         android:ems="5"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionDone|flagForceAscii"
         android:inputType="text"
         android:text=""
         android:textCursorDrawable="@drawable/edittxt_cursor"
@@ -195,7 +195,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="20dp"
         android:text="@string/gender"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -205,7 +205,7 @@
         android:id="@+id/genderRg"
         android:layout_width="205dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
         android:orientation="horizontal"
         android:paddingTop="2dp"
@@ -257,7 +257,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
         android:text="휴대폰"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -267,7 +267,7 @@
         android:id="@+id/hp1Et"
         android:layout_width="57dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/custom_edittxt"
         android:ems="5"
@@ -283,7 +283,7 @@
         android:id="@+id/hp2Et"
         android:layout_width="69dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/custom_edittxt"
         android:ems="5"
@@ -299,7 +299,7 @@
         android:id="@+id/hp3Et"
         android:layout_width="69dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/custom_edittxt"
         android:ems="5"
@@ -331,15 +331,21 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="5dp"
         android:text="@string/withdrawal"
         android:textColor="@color/colorRed"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/logoutTv"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hpTv"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/hpTv" />
+
+    <TextView
+        android:id="@+id/tvBlank"
+        android:layout_width="0dp"
+        android:layout_height="360dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/withdrawalTv" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
