--- a/app/src/main/res/layout/custom_item_card.xml
+++ b/app/src/main/res/layout/custom_item_card.xml
@@ -28,27 +28,27 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:background="@color/colorProductNameBg"
+            android:maxLines="1"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:text="ProductName"
             android:textAlignment="center"
-            android:textSize="18sp"
-            android:background="@color/colorProductNameBg"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <TextView
             android:id="@+id/productPriceTv"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="ProductPrice"
-            android:textAlignment="center"
+            android:textAlignment="textEnd"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/productNameTv" />
 
 
