--- a/app/src/main/res/layout/custom_select_type_card.xml
+++ b/app/src/main/res/layout/custom_select_type_card.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp"
+    android:layout_marginStart="3dp"
     android:layout_marginTop="3dp"
+    android:layout_marginEnd="3dp"
     android:layout_marginBottom="3dp"
-    app:cardCornerRadius="15dp" >
+    app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" >
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp">
 
         <TextView
-            android:id="@+id/typeSelectTv"
+            android:id="@+id/categorySelectTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Type"
-            android:padding="8dp"
+            android:padding="0dp"
+            android:text="전체"
+            android:textSize="14sp"
             android:textStyle="bold"
-            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
