--- a/app/src/main/res/layout/activity_cart_fragment.xml
+++ b/app/src/main/res/layout/activity_cart_fragment.xml
@@ -3,17 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="600dp"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Fragment.CartFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/tvBlank2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
 
 
 </LinearLayout>
